<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C5D1EB"
    tools:context=".Quiz">

    <TextView
        android:id="@+id/QuizApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/Question"
        android:textColor="#3366CC"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtQuestions"
        android:layout_width="400dp"
        android:layout_height="600dp"
        android:layout_above="@id/choices"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="-182dp"
        android:gravity="center_horizontal"
        android:text="@string/txtQuestions"
        android:textColor="#333399"
        android:textSize="17sp"
        android:textStyle="bold"
        app:autoSizeTextType="uniform" />

    <TextView
        android:id="@+id/txtQuestionCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/txtCounter"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/choices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <Button
            android:id="@+id/answerA"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="3dp"
            android:backgroundTint="#3399FF"
            android:text="@string/btnAnsA" />

        <Button
            android:id="@+id/answerA2"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="3dp"
            android:backgroundTint="#3399FF"
            android:text="@string/btnAnsB" />

        <Button
            android:id="@+id/answerA3"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="3dp"
            android:backgroundTint="#3399FF"
            android:text="@string/btnAnsC" />

        <Button
            android:id="@+id/answerA4"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="3dp"
            android:backgroundTint="#3399FF"
            android:text="@string/btnAnsD" />

        <Button
            android:id="@+id/btnResults"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginTop="5dp"
            android:backgroundTint="#333399"
            android:gravity="center_horizontal"
            android:paddingTop="10dp"
            android:text="@string/btnResults"
            android:textStyle="bold" />

    </LinearLayout>


</RelativeLayout>