<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/txtWelcome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C5D1EB"
    tools:context=".End">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtPageTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="#333399"
            android:text="@string/txtPageTitle"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtWelcomeTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal"
            android:gravity="center|center_horizontal|center_vertical"
            android:paddingTop="50dp"
            android:paddingBottom="50dp"
            android:text="@string/txtResultsView"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnGoToQuiz"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="100dp"
            android:gravity="center|center_horizontal|center_vertical"
            android:backgroundTint="#333399"
            android:text="@string/btnIntent"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnQuitProgram"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center|center_horizontal|center_vertical"
            android:text="@string/btnQuit"
            android:backgroundTint="#333399"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>